--- a/kakaoenterprizeindex.html
+++ b/kakaoenterprizeindex.html
@@ -189,7 +189,7 @@
             </div>
             <ul class="space-y-2 text-gray-700">
                 <li>• 로켓 런처 프로그램</li>
-                <li>• 카나나 테스트 계정 제공</li>
+                <li>• <strong>카나나 LLM 활용 환경 제공(Playground/API)</strong></li> <!-- 변경 -->
                 <li>• 기술 지원 및 멘토링</li>
                 <li>• 투자 연계 네트워킹</li>
             </ul>
@@ -503,7 +503,7 @@
                         <td class="px-4 py-4">
                             <div class="font-semibold mb-2">🎯 팀 프로젝트 발표</div>
                             <ul class="text-sm space-y-1">
-                                <li>• 카나나 계정 기반 팀별 PoC 시연</li>
+                                <li>• <strong>팀별 PoC 프로젝트 발표 (카나나 LLM 기반 아이디어 적용)</strong></li> <!-- 변경 -->
                                 <li>• 성과 공유 & 피드백</li>
                                 <li>• 후속 LAB 참여 안내</li>
                             </ul>
@@ -960,7 +960,7 @@
             <ul class="space-y-2 text-sm">
                 <li class="flex items-center">
                     <i class="fas fa-check-circle text-green-400 mr-2"></i>
-                    카나나 테스트 계정 기반 소규모 실습
+                    <strong>카카오 자체 LLM(카나나) Playground 연동 소규모 실습</strong> <!-- 변경 -->
                 </li>
                 <li class="flex items-center">
                     <i class="fas fa-check-circle text-green-400 mr-2"></i>
