--- a/kakaoenterprizeindex.html
+++ b/kakaoenterprizeindex.html
@@ -46,6 +46,9 @@
             background: linear-gradient(90deg, #FEE500, #2D5BFF);
             border-radius: 4px;
         }
+        .text-shadow-sm { 
+            text-shadow: 0 1px 2px rgba(0,0,0,0.18); 
+        }
     </style>
 </head>
 <body class="bg-gray-50">
@@ -921,26 +924,29 @@
         </div>
     </div>
 
-<div class="bg-gradient-to-r from-yellow-400 to-orange-500 p-6 rounded-lg text-center">
-  <h3 class="text-2xl font-extrabold mb-4 text-gray-900">🎯 핵심 성과 요약</h3>
-  <div class="grid grid-cols-4 gap-4">
-    <div>
-      <div class="text-3xl font-extrabold text-amber-900">2.3x</div>
-      <div class="text-sm text-gray-800">실무 적용률 향상</div>
-    </div>
-    <div>
-      <div class="text-3xl font-extrabold text-amber-900">85%</div>
-      <div class="text-sm text-gray-800">인프라 비용 절감</div>
-    </div>
-    <div>
-      <div class="text-3xl font-extrabold text-amber-900">3x</div>
-      <div class="text-sm text-gray-800">개발 속도 증가</div>
-    </div>
-    <div>
-      <div class="text-3xl font-extrabold text-amber-900">11K+</div>
-      <div class="text-sm text-gray-800">커뮤니티 네트워크</div>
-    </div>
-  </div>
+ <div class="bg-gradient-to-r from-yellow-400 to-orange-500 text-white p-6 rounded-lg text-center">
+       
+<h3 class="text-2xl font-extrabold mb-4 text-gray-900 text-shadow-sm">🎯 핵심 성과 요약</h3>
+<div class="text-3xl font-extrabold text-amber-900 text-shadow-sm">2.3x
+        <div class="grid grid-cols-4 gap-4">
+            <div>
+                <div class="text-3xl font-bold">2.3x</div>
+                <div class="text-sm">실무 적용률 향상</div>
+            </div>
+            <div>
+                <div class="text-3xl font-bold">85%</div>
+                <div class="text-sm">인프라 비용 절감</div>
+            </div>
+            <div>
+                <div class="text-3xl font-bold">3x</div>
+                <div class="text-sm">개발 속도 증가</div>
+            </div>
+            <div>
+                <div class="text-3xl font-bold">11K+</div>
+                <div class="text-sm">커뮤니티 네트워크</div>
+            </div>
+        </div>
+</div>
 </div>
 
 <!-- 슬라이드 10: 다음 단계 -->
