--- a/kakaoenterprizeindex.html
+++ b/kakaoenterprizeindex.html
@@ -1,3 +1,4 @@
+```html
 <!DOCTYPE html>
 <html lang="ko">
 <head>
@@ -46,9 +47,8 @@
             background: linear-gradient(90deg, #FEE500, #2D5BFF);
             border-radius: 4px;
         }
-        .text-shadow-sm { 
-            text-shadow: 0 1px 2px rgba(0,0,0,0.18); 
-        }
+        /* 👇 대안2: 미세한 텍스트 그림자(가독성 강화) */
+        .text-shadow-sm { text-shadow: 0 1px 2px rgba(0,0,0,0.18); }
     </style>
 </head>
 <body class="bg-gray-50">
@@ -152,7 +152,7 @@
                 <h3 class="text-xl font-bold">고성능 IaaS</h3>
             </div>
             <ul class="space-y-2 text-gray-700">
-                <li>• 최신 GPU 하드웨어 + 전용 튜닝</li>
+                <li>• 최신 GPU 하드वेयर + 전용 튜닝</li>
                 <li>• SmartNIC 기반 고속 네트워크</li>
                 <li>• 인피니밴드 기반 GPU 간 통신</li>
                 <li>• 분산 학습 최적화 환경</li>
@@ -924,29 +924,28 @@
         </div>
     </div>
 
- <div class="bg-gradient-to-r from-yellow-400 to-orange-500 text-white p-6 rounded-lg text-center">
-       
-<h3 class="text-2xl font-extrabold mb-4 text-gray-900 text-shadow-sm">🎯 핵심 성과 요약</h3>
-<div class="text-3xl font-extrabold text-amber-900 text-shadow-sm">2.3x
+    <!-- 👇 대안2 적용 구간: 텍스트 그림자 + 고대비 컬러 -->
+    <div class="bg-gradient-to-r from-yellow-400 to-orange-500 p-6 rounded-lg text-center">
+        <h3 class="text-2xl font-extrabold mb-4 text-gray-900 text-shadow-sm">🎯 핵심 성과 요약</h3>
         <div class="grid grid-cols-4 gap-4">
             <div>
-                <div class="text-3xl font-bold">2.3x</div>
-                <div class="text-sm">실무 적용률 향상</div>
+                <div class="text-3xl font-extrabold text-amber-900 text-shadow-sm">2.3x</div>
+                <div class="text-sm text-gray-800">실무 적용률 향상</div>
             </div>
             <div>
-                <div class="text-3xl font-bold">85%</div>
-                <div class="text-sm">인프라 비용 절감</div>
+                <div class="text-3xl font-extrabold text-amber-900 text-shadow-sm">85%</div>
+                <div class="text-sm text-gray-800">인프라 비용 절감</div>
             </div>
             <div>
-                <div class="text-3xl font-bold">3x</div>
-                <div class="text-sm">개발 속도 증가</div>
+                <div class="text-3xl font-extrabold text-amber-900 text-shadow-sm">3x</div>
+                <div class="text-sm text-gray-800">개발 속도 증가</div>
             </div>
             <div>
-                <div class="text-3xl font-bold">11K+</div>
-                <div class="text-sm">커뮤니티 네트워크</div>
+                <div class="text-3xl font-extrabold text-amber-900 text-shadow-sm">11K+</div>
+                <div class="text-sm text-gray-800">커뮤니티 네트워크</div>
             </div>
         </div>
-</div>
+    </div>
 </div>
 
 <!-- 슬라이드 10: 다음 단계 -->
@@ -1115,3 +1114,4 @@
 
 </body>
 </html>
+```
