--- a/kakaoenterprizeindex.html
+++ b/kakaoenterprizeindex.html
@@ -1,4 +1,3 @@
-```html
 <!DOCTYPE html>
 <html lang="ko">
 <head>
@@ -66,13 +65,10 @@
             </div>
         </div>
         <h1 class="text-5xl font-bold mb-4">AI 교육 협력 제안서</h1>
-        <h2 class="text-2xl font-light mb-8">고성능 클라우드 × 검증된 교육 방법론</h2>
+        <h2 class="text-2xl font-light mb-8">고성능 클라우드 × 검증된 기업교육 방법론</h2>
         <div class="text-xl bg-white bg-opacity-20 px-8 py-4 rounded-lg inline-block">
-            대학 창업자 과정 & 스타트업 B2B 확장 모델
+            대학 창업자 과정 & 스타트업 확장 과정
         </div>
-    </div>
-    <div class="mt-12 text-sm opacity-80">
-        AI 실무 역량 강화를 위한 통합 교육 솔루션
     </div>
 </div>
 
@@ -88,11 +84,11 @@
             <ul class="space-y-3 text-gray-700">
                 <li class="flex items-center">
                     <i class="fas fa-times-circle text-red-500 mr-2"></i>
-                    단발성 교육의 한계 (실무 적용률 28%)
+                    단발성 교육의 한계
                 </li>
                 <li class="flex items-center">
                     <i class="fas fa-times-circle text-red-500 mr-2"></i>
-                    매일 250개씩 발표되는 AI 논문의 빠른 변화
+                    AI 기술의 빠른 변화
                 </li>
                 <li class="flex items-center">
                     <i class="fas fa-times-circle text-red-500 mr-2"></i>
@@ -110,7 +106,7 @@
             <ul class="space-y-3 text-gray-700">
                 <li class="flex items-center">
                     <i class="fas fa-check-circle text-green-500 mr-2"></i>
-                    커뮤니티 기반 지속 학습 (적용률 65%↑)
+                    커뮤니티 기반 지속 학습
                 </li>
                 <li class="flex items-center">
                     <i class="fas fa-check-circle text-green-500 mr-2"></i>
@@ -122,7 +118,7 @@
                 </li>
                 <li class="flex items-center">
                     <i class="fas fa-check-circle text-green-500 mr-2"></i>
-                    고성능 저비용 인프라 + 검증된 교육법
+                    고성능 저비용 인프라 + 산출물 중심의 교육 노하우
                 </li>
             </ul>
         </div>
@@ -152,7 +148,7 @@
                 <h3 class="text-xl font-bold">고성능 IaaS</h3>
             </div>
             <ul class="space-y-2 text-gray-700">
-                <li>• 최신 GPU 하드वेयर + 전용 튜닝</li>
+                <li>• 최신 GPU + 전용 튜닝</li>
                 <li>• SmartNIC 기반 고속 네트워크</li>
                 <li>• 인피니밴드 기반 GPU 간 통신</li>
                 <li>• 분산 학습 최적화 환경</li>
@@ -165,7 +161,7 @@
                 <h3 class="text-xl font-bold">가격 경쟁력</h3>
             </div>
             <ul class="space-y-2 text-gray-700">
-                <li>• 글로벌 CSP 대비 <strong>최대 85% 저렴</strong></li>
+                <li>• 글로벌 CSP 대비 <strong>최대 15% 저렴</strong></li>
                 <li>• 동일 성능 기준 비용 효율성</li>
                 <li>• 스타트업 친화적 과금 체계</li>
                 <li>• 로켓 런처 프로그램 크레딧 지원</li>
@@ -229,7 +225,7 @@
                         <strong>Agent</strong>: 도메인 지식
                     </div>
                     <div class="bg-purple-100 p-2 rounded">
-                        <strong>Active</strong>: 체험형 학습
+                        <strong>Active</strong>: 자기주도 학습
                     </div>
                 </div>
             </div>
@@ -253,10 +249,8 @@
                 <i class="fas fa-trophy text-4xl text-yellow-600 mb-4"></i>
                 <h3 class="text-xl font-bold mb-2">검증된 성과</h3>
                 <div class="space-y-2 text-sm text-gray-600">
-                    <div class="text-2xl font-bold text-orange-600">70+</div>
+                    <div class="text-2xl font-bold text-orange-600">100+</div>
                     <div>글로벌 논문 발행</div>
-                    <div class="text-2xl font-bold text-purple-600">65%</div>
-                    <div>실무 적용률 (업계 평균 28%)</div>
                 </div>
             </div>
         </div>
@@ -361,7 +355,7 @@
                         <i class="fas fa-arrow-right text-blue-600"></i>
                     </div>
                     <div class="flex items-center justify-between">
-                        <span>멀티클라우드 확장 전략</span>
+                        <span>엔터프라이즈급 AI 서비스 운영을 위한 풀스택 역량 확보</span>
                         <i class="fas fa-check-circle text-blue-600"></i>
                     </div>
                 </div>
@@ -390,7 +384,7 @@
             </div>
 
             <div class="bg-blue-100 p-3 rounded-lg text-center">
-                <span class="font-semibold text-blue-800">📈 결과: 안정적 운영 + 확장 역량</span>
+                <span class="font-semibold text-blue-800">📈 결과: 안정적 운영 + 풀스택 역량</span>
             </div>
         </div>
     </div>
@@ -412,7 +406,7 @@
 
     <div class="bg-white rounded-lg shadow-lg overflow-hidden">
         <div class="bg-gradient-to-r from-blue-600 to-purple-600 text-white p-4">
-            <h3 class="text-xl font-bold text-center">Day별 학습 로드맵</h3>
+            <h3 class="text-xl font-bold text-center">학습 로드맵</h3>
         </div>
 
         <div class="overflow-x-auto">
@@ -637,10 +631,9 @@
         <div class="bg-gradient-to-r from-blue-600 to-purple-600 text-white px-8 py-4 rounded-lg inline-block">
             <div class="text-lg font-semibold mb-2">🎯 공통 성공 요인</div>
             <div class="flex justify-center space-x-6 text-sm">
-                <span>✓ 실무 중심 커리큘럼</span>
-                <span>✓ 프로젝트 기반 학습</span>
-                <span>✓ 지속적 커뮤니티 지원</span>
-                <span>✓ 맞춤형 도메인 적용</span>
+                <span>✓ 도메인 맞춤형 커리큘럼</span>
+                <span>✓ 실무 중심 프로젝트</span>
+                <span>✓ 현업 전문 강사</span>
             </div>
         </div>
     </div>
